// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Render properties.gapDegree: 60 - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapDegree: 60"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render properties.gapPosition: bottom - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapPosition: bottom"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render properties.gapPosition: left - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapPosition: left"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m -47,0
   a 47,47 0 1 1 94,0
   a 47,47 0 1 1 -94,0"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m -47,0
   a 47,47 0 1 1 94,0
   a 47,47 0 1 1 -94,0"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m -47,0
   a 47,47 0 1 1 94,0
   a 47,47 0 1 1 -94,0"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render properties.gapPosition: right - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapPosition: right"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 47,0
   a 47,47 0 1 1 -94,0
   a 47,47 0 1 1 94,0"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 47,0
   a 47,47 0 1 1 -94,0
   a 47,47 0 1 1 94,0"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 47,0
   a 47,47 0 1 1 -94,0
   a 47,47 0 1 1 94,0"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render properties.percent - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.percent"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.showInfo: false - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
  id="properties.showInfo: false"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.status: active - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default"
  id="properties.status: active"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.status: exception - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-default"
  id="properties.status: exception"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Render properties.status: normal - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.status: normal"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.status: success - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
  id="properties.status: success"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Render properties.strokeColor: '#e91e63'  trailColor: '#ff9800' - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeColor: '#e91e63'  trailColor: '#ff9800'"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
      style="background-color: rgb(255, 152, 0);"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px; background: rgb(233, 30, 99);"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.strokeColor: '#e91e63' - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeColor: '#e91e63'"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px; background: rgb(233, 30, 99);"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.strokeLinecap: square  - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeLinecap: square "
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px; border-radius: 0;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.strokeWidth: 18 - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeWidth: 18"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 18px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.trailColor: '#ff9800' - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.trailColor: '#ff9800'"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
      style="background-color: rgb(255, 152, 0);"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render properties.type: circle - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.type: circle"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render properties.type: dashboard - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.type: dashboard"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 220.30970943744057px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 66.09291283123217px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render properties.width: 180 - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.width: 180"
>
  <div
    class="ant-progress-inner"
    style="width: 180px; height: 180px; font-size: 33px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Render required = true properties.gapDegree: 60 - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapDegree: 60"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true properties.gapPosition: bottom - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapPosition: bottom"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true properties.gapPosition: left - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapPosition: left"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m -47,0
   a 47,47 0 1 1 94,0
   a 47,47 0 1 1 -94,0"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m -47,0
   a 47,47 0 1 1 94,0
   a 47,47 0 1 1 -94,0"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m -47,0
   a 47,47 0 1 1 94,0
   a 47,47 0 1 1 -94,0"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true properties.gapPosition: right - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.gapPosition: right"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 47,0
   a 47,47 0 1 1 -94,0
   a 47,47 0 1 1 94,0"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 235.30970943744057px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 47,0
   a 47,47 0 1 1 -94,0
   a 47,47 0 1 1 94,0"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.59291283123217px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 47,0
   a 47,47 0 1 1 -94,0
   a 47,47 0 1 1 94,0"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -30px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true properties.percent - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.percent"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.showInfo: false - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
  id="properties.showInfo: false"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.status: active - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default"
  id="properties.status: active"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.status: exception - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-default"
  id="properties.status: exception"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.status: normal - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.status: normal"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.status: success - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
  id="properties.status: success"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Render required = true properties.strokeColor: '#e91e63'  trailColor: '#ff9800' - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeColor: '#e91e63'  trailColor: '#ff9800'"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
      style="background-color: rgb(255, 152, 0);"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px; background: rgb(233, 30, 99);"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.strokeColor: '#e91e63' - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeColor: '#e91e63'"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px; background: rgb(233, 30, 99);"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.strokeLinecap: square  - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeLinecap: square "
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px; border-radius: 0;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.strokeWidth: 18 - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.strokeWidth: 18"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 18px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.trailColor: '#ff9800' - value[0] 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.trailColor: '#ff9800'"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
      style="background-color: rgb(255, 152, 0);"
    >
      <div
        class="ant-progress-bg"
        style="width: 30%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="30%"
  >
    30%
  </span>
</div>
`;

exports[`Render required = true properties.type: circle - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.type: circle"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true properties.type: dashboard - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.type: dashboard"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 220.30970943744057px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 66.09291283123217px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Render required = true properties.width: 180 - value[0] 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  id="properties.width: 180"
>
  <div
    class="ant-progress-inner"
    style="width: 180px; height: 180px; font-size: 33px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `false`;

exports[`Test Schema default 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.gapDegree: 60 1`] = `false`;

exports[`Test Schema properties.gapDegree: 60 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.gapPosition: bottom 1`] = `false`;

exports[`Test Schema properties.gapPosition: bottom 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.gapPosition: left 1`] = `false`;

exports[`Test Schema properties.gapPosition: left 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.gapPosition: right 1`] = `false`;

exports[`Test Schema properties.gapPosition: right 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.percent 1`] = `false`;

exports[`Test Schema properties.percent 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.showInfo: false 1`] = `false`;

exports[`Test Schema properties.showInfo: false 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.status: active 1`] = `false`;

exports[`Test Schema properties.status: active 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.status: exception 1`] = `false`;

exports[`Test Schema properties.status: exception 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.status: normal 1`] = `false`;

exports[`Test Schema properties.status: normal 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.status: success 1`] = `false`;

exports[`Test Schema properties.status: success 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.strokeColor: '#e91e63'  trailColor: '#ff9800' 1`] = `false`;

exports[`Test Schema properties.strokeColor: '#e91e63'  trailColor: '#ff9800' 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.strokeColor: '#e91e63' 1`] = `false`;

exports[`Test Schema properties.strokeColor: '#e91e63' 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.strokeLinecap: square  1`] = `false`;

exports[`Test Schema properties.strokeLinecap: square  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.strokeWidth: 18 1`] = `false`;

exports[`Test Schema properties.strokeWidth: 18 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.trailColor: '#ff9800' 1`] = `false`;

exports[`Test Schema properties.trailColor: '#ff9800' 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: circle 1`] = `false`;

exports[`Test Schema properties.type: circle 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: dashboard 1`] = `false`;

exports[`Test Schema properties.type: dashboard 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.width: 180 1`] = `false`;

exports[`Test Schema properties.width: 180 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "line",
        "circle",
        "dashboard",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;
